@@ -1,25 +1,36 @@
 package project.utils;
 
+import java.util.Calendar;
+
 public class Utils {
     public static void printList( String[] listItems, String header) {
         printListHeader(header);
         printListItems(listItems);
     }
 
+
     public static void clearConsole() {
         try {
             final String os = System.getProperty("os.name");
+
             if (os.contains("Windows")) {
-                Runtime.getRuntime().exec("cls");
-            }
-            else {
+                new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
+            } else {
                 Runtime.getRuntime().exec("clear");
+                System.out.print("\033[H\033[2J");
+                System.out.flush();
             }
-        }
-        catch (final Exception e) {
-            e.printStackTrace();
+        } catch (Exception e) {
+            System.out.println(e.getMessage());
         }
     }
+
+    public static int getCurrentWeekNumber() {
+        Calendar calendar = Calendar.getInstance();
+        int weekNumber = calendar.get(Calendar.WEEK_OF_YEAR);
+        return weekNumber;
+    }
+
 
     public static void printList( String[] listItems) {
         printListItems(listItems);
@@ -35,4 +46,5 @@ public class Utils {
             System.out.println("\t[" + (i+1) + "] " + listItems[i]);
         }
     }
+
 }
